...
      <ImageBackground
        source={require('../../assets/splash-bg.png')}
        style={styles.backgroundImage}
        resizeMode="cover"
      >
        <View style={styles.content}>
          <Text style={styles.title}>NEVERMORE</Text>
          
          <Text style={styles.description}>
            Let us know if you're on your own path to sobriety, or here to support someone else on theirs. Either way, you're in the right place.
          </Text>
          
          <Button
...
